--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Add data to your .gitignore file your data - this will be kept off of github
+product_info.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
